Update to Minecraft 26.1 (#3541)
* Update to Minecraft 26.1-pre1

FRAPI not included

* Fix see-through leaves setting

* Fix dyes and add NeoForge

* Update to pre2

* Update to rc2

* Update all actions

* Fix action name